Bug 199607. Fix smoothscrolling bugs. r+sr=dbaron